--- a/test6/src/main/res/layout/activity_main.xml
+++ b/test6/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-​<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,6 +7,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ghwjd9269@naver.com, 주소:htts://www.ghwjd9269.com"
+        android:textSize="20sp"
+        android:fontFamily="@font/baemin3"
+        android:autoLink="email|web"
+        />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -59,7 +68,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="헬로우 월드!"
+        android:fontFamily="@font/baemin3"
         android:textColor="#B136F4"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
