--- a/test6/src/main/res/layout/activity_main.xml
+++ b/test6/src/main/res/layout/activity_main.xml
@@ -11,6 +11,15 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/longtext"
+        android:textSize="20sp"
+        android:maxLines="3"
+        android:ellipsize="end"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="ghwjd9269@naver.com, 주소:htts://www.ghwjd9269.com"
         android:textSize="20sp"
         android:fontFamily="@font/baemin3"
@@ -57,7 +66,11 @@
         android:id="@+id/img1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/san1" />
+        android:src="@drawable/san4"
+        android:maxWidth="400dp"
+        android:maxHeight="400dp"
+        android:adjustViewBounds="true"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
