--- a/test7/src/main/res/layout/activity_main3.xml
+++ b/test7/src/main/res/layout/activity_main3.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity2">
+    tools:context=".MainActivity3">
 
     <ImageView
         android:id="@+id/img1"
@@ -14,13 +13,15 @@
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
         />
+
     <Button
+        android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button1"
-        android:layout_alignParentBottom="true"
-
         />
 
 
-</RelativeLayout>
+
+
+</FrameLayout>
