--- a/test11/src/main/res/menu/menu_three.xml
+++ b/test11/src/main/res/menu/menu_three.xml
@@ -9,11 +9,17 @@
         android:id="@+id/menu2"
         android:title="메뉴2"
         android:icon="@android:drawable/ic_menu_add"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"/>
         />
     <item
         android:id="@+id/menu3"
         android:title="메뉴3"
         app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/searchMenu"
+        android:title="search"
+        app:showAsAction="always"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 
 </menu>
