--- a/test10/src/main/res/layout/activity_main.xml
+++ b/test10/src/main/res/layout/activity_main.xml
@@ -7,7 +7,14 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    
+
+    <Button
+        android:id="@+id/btnDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="날짜 다이얼로그 출력 버튼"
+        android:textSize="30sp"/>
+
     <Button
         android:id="@+id/btn1"
         android:layout_width="wrap_content"
