--- a/ch12_material/src/main/res/layout/fragment_three.xml
+++ b/ch12_material/src/main/res/layout/fragment_three.xml
@@ -5,13 +5,40 @@
     android:layout_height="match_parent"
     tools:context=".OneFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Three Fragement!!"
-        android:textSize="25dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:gravity="center_horizontal"
+        android:textSize="25sp"
         android:textStyle="bold"
-        android:gravity="center"/>
+        android:text="가입하기"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="130dp"
+        android:hint="이름을 입력하세요."
+        android:inputType="text"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="180dp"
+        android:hint="이에일을 입력하세요."
+        android:inputType="textEmailAddress"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="230dp"
+        android:hint="비밀번호"
+        android:inputType="textPassword"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="280dp"
+        android:text="가입하기"/>
 
 </FrameLayout>
