--- a/ch12_material/src/main/res/layout/fragment_two.xml
+++ b/ch12_material/src/main/res/layout/fragment_two.xml
@@ -5,13 +5,31 @@
     android:layout_height="match_parent"
     tools:context=".OneFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Two Fragment!!"
-        android:textSize="25dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:gravity="center_horizontal"
+        android:textSize="25sp"
         android:textStyle="bold"
-        android:gravity="center"/>
+        android:text="로그인하기"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:hint="이에일을 입력하세요."
+        android:inputType="textEmailAddress"/>
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:hint="비밀번호"
+        android:inputType="textPassword"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="260dp"
+        android:text="확인"/>
 </FrameLayout>
