--- a/ch12_material/src/main/res/values/themes.xml
+++ b/ch12_material/src/main/res/values/themes.xml
@@ -3,7 +3,9 @@
     <style name="Base.Theme.K230201AndroidLab" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowActionModeOverlay"/>
     </style>
+
 
     <style name="Theme.K230201AndroidLab" parent="Base.Theme.K230201AndroidLab" />
 </resources>
