--- a/test10/src/main/res/layout/activity_main.xml
+++ b/test10/src/main/res/layout/activity_main.xml
@@ -9,6 +9,34 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/btnCheck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="checkBox 다이얼로그 버튼"
+        android:textSize="30sp"/>
+
+    <Button
+        android:id="@+id/btnMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="메뉴 다이얼로그 버튼"
+        android:textSize="30sp"/>
+
+    <Button
+        android:id="@+id/btnAlert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="경고 다이얼로그 버튼"
+        android:textSize="30sp"/>
+
+    <Button
+        android:id="@+id/btnTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="시간 다이얼로그 출력 버튼"
+        android:textSize="30sp"/>
+
+    <Button
         android:id="@+id/btnDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
