--- a/test10/src/main/res/layout/activity_main.xml
+++ b/test10/src/main/res/layout/activity_main.xml
@@ -8,47 +8,65 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"/>
+
+    <Button
+        android:id="@+id/btnVideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="샘플영상 확인 버튼"
+        android:textSize="20sp"/>
+    <Button
+        android:id="@+id/btnSound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="소리 확인 버튼"
+        android:textSize="20sp"/>
+
     <Button
         android:id="@+id/btnCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="checkBox 다이얼로그 버튼"
-        android:textSize="30sp"/>
+        android:textSize="20sp"/>
 
     <Button
         android:id="@+id/btnMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="메뉴 다이얼로그 버튼"
-        android:textSize="30sp"/>
+        android:textSize="20sp"/>
 
     <Button
         android:id="@+id/btnAlert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="경고 다이얼로그 버튼"
-        android:textSize="30sp"/>
+        android:textSize="20sp"/>
 
     <Button
         android:id="@+id/btnTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="시간 다이얼로그 출력 버튼"
-        android:textSize="30sp"/>
+        android:textSize="20sp"/>
 
     <Button
         android:id="@+id/btnDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="날짜 다이얼로그 출력 버튼"
-        android:textSize="30sp"/>
+        android:textSize="20sp"/>
 
     <Button
         android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="토스트 출력 버튼"
-        android:textSize="30sp"/>
+        android:textSize="20sp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
