--- a/test18/src/main/res/layout/activity_main.xml
+++ b/test18/src/main/res/layout/activity_main.xml
@@ -5,14 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/btn1test1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="버튼:test1()"
+        android:text="버튼1:test1()"
         android:textSize="30sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+         />
 
 </LinearLayout>
